codex-rs/tui_app_server/src/snapshots/codex_tui_app_server__cwd_prompt__tests__cwd_prompt_modal.snap
---
source: tui_app_server/src/cwd_prompt.rs
expression: terminal.backend()
---

请选择用于继续该会话的工作目录

  会话目录 = 上次会话记录中的最近工作目录                                       
  当前目录 = 你现在所在的工作目录

› 1. 使用会话目录（/Users/example/session）                                     
  2. 使用当前目录（/Users/example/current）

  按 enter 继续
